--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
 	"description": "API project for freeCodeCamp",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"start_local": "node -r dotenv/config server.js",
+		"dev": "nodemon /server.js"
 	},
 	"dependencies": {
 		"express": "^5.0.0-alpha.2",
 		"mongodb": "^2.2.5",
-		"mongoose": "^4.5.7",
+		"mongoose": "^5.6.11",
 		"cors": "^2.8.1",
 		"body-parser": "^1.15.2"
 	},
@@ -25,5 +27,9 @@
 		"hyperdev",
 		"express"
 	],
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"dotenv": "^8.1.0",
+		"nodemon": "^1.19.1"
+	}
 }
